--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * Tips subsystem has been implemented
 * FBReader can listen for Bonjour (zeroconf) OPDS announcement. JmDNS (http://jmdns.sourceforge.net/) is used.
 * Plugin API works on devices with Android 3/4
+* Updated Polish localization (by Tomasz Długosz)
 
 ===== 1.2.6 (Dec 19, 2011) =====
 * Android 3.*, 4.*: bottom buttons are hidden during book reading
