--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 * Plugin API works on devices with Android 3/4
 * Updated Polish localization (by Tomasz Długosz)
 * Option for disabling button lights in Android 3/4 has been introduced
+* Plural forms support in resources has been implemented
 
 ===== 1.2.6 (Dec 19, 2011) =====
 * Android 3.*, 4.*: bottom buttons are hidden during book reading
