--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 * An exception in *.mobi file reading has been fixed
 * New screen orientation option; keeps screen orientation between starts
 * New action bar + navigation bar behaviour in Android 3/4 (screen center tap runs both bars)
+* TOC item name in navigation window
 
 ===== 1.2.6 (Dec 19, 2011) =====
 * Android 3.*, 4.*: bottom buttons are hidden during book reading
