--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
 * TOC item name is shown in navigation window
 * Versions for Honeycomb (Android 3.0) and Ice Cream Sandwich (Android 4.0) are megred into the same APK
 * Kindle menu issue has been fixed
+* FB2 footnote parsing issue has been fixed
 
 ===== 1.2.6 (Dec 19, 2011) =====
 * Android 3.*, 4.*: bottom buttons are hidden during book reading
