--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.3 (Jan ??, 2012) =====
+===== 1.3 (Jan 8, 2012) =====
 * Tips subsystem has been implemented
 * FBReader can listen for Bonjour (zeroconf) OPDS announcement. JmDNS (http://jmdns.sourceforge.net/) is used.
 * Plugin API works on devices with Android 3/4
