--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.3.2 (Jan ??, 2012) =====
+* ExceptionInInitializerError processing has been fixed
+
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
 * Galaxy Tab specific Book info issue has been fixed
