--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ===== 1.3.2 (Jan ??, 2012) =====
 * ExceptionInInitializerError processing has been fixed
+* Menu button shows action/navigation bars on old devices with ICS installed
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
