--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * ExceptionInInitializerError processing has been fixed
 * Menu button shows action/navigation bars on old devices with ICS installed
 * Hardware acceleration is used for 3d animation if possible (Android 3/4)
+* Fixed an issue for ePub files with incorrect cover label
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
