--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 * Menu button shows action/navigation bars on old devices with ICS installed
 * Hardware acceleration is used for 3d animation if possible (Android 3/4)
 * Fixed an issue for ePub files with incorrect cover label
-* Better currency formatting
+* Better money amount formatting
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
