--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 * Hardware acceleration is used for 3d animation if possible (Android 3/4)
 * Fixed an issue for ePub files with incorrect cover label
 * Better money amount formatting
+* Grayscale Android 3.* logo is back
+* Android 4: separate options for status bar & action bar
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
