--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 * Better money amount formatting
 * Grayscale Android 3.* logo is back
 * Android 4: separate options for status bar & action bar
+* Android 3/4: always show book title in the action bar
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
