--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 * Grayscale Android 3.* logo is back
 * Android 4: separate options for status bar & action bar
 * Android 3/4: always show book title in the action bar
+* Updated Czech localization (by Marek Pavelka)
+* Updated Romanian localization (by Mary Hit)
 
 ===== 1.3.1 (Jan 9, 2012) =====
 * Persistent tip prompt issue has been fixed
