--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.3.2 (Jan ??, 2012) =====
+===== 1.3.2 (Jan 17, 2012) =====
 * MIPS processor architectures are supported (with NDK from http://developer.mips.com/android/download-android-ndk/)
 * ExceptionInInitializerError processing has been fixed
 * Menu button shows action/navigation bars on old devices with ICS installed
