--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.3.2a (Jan 17, 2012) =====
+* Fixed menu issue on old devices with ICS installed
+
 ===== 1.3.2 (Jan 17, 2012) =====
 * MIPS processor architectures are supported (with NDK from http://developer.mips.com/android/download-android-ndk/)
 * ExceptionInInitializerError processing has been fixed
