--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+===== 1.3.3 (Jan 18, 2012) =====
+* Proguard -dontoptimize option, looks like these optimizations are buggy :(
+* 3d page turning hardware optimization has been fixed
+
 ===== 1.3.2a (Jan 17, 2012) =====
 * Fixed menu issue on old devices with ICS installed
 
