--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.3.4 (??? ??, 2012) =====
+* About section in the preferences dialog
+
 ===== 1.3.3 (Jan 18, 2012) =====
 * Proguard -dontoptimize option, looks like these optimizations are buggy :(
 * 3d page turning hardware optimization has been fixed
