--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 2.0 beta 1 (Jan ??, 2012) =====
+===== 2.0 beta 1 (Jan 23, 2012) =====
 * RTF support
 * More encodings in the list
 * non-ascii archive entry names issue has been fixed
