--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ===== 1.3.4 (??? ??, 2012) =====
 * About section in the preferences dialog
+* Better SlovoEd dictionary integration (780 dictionaries are supported)
 * CHANGE_WIFI_STATE permission is not required more
 * getBookFileName() API method has been implemented
 
