--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.3.6 (Feb ??, 2012) =====
+* Updated Ukrainian translation (by Nazary Makarenko)
+
 ===== 1.3.5 (Feb 2, 2012) =====
 * About section in the preferences dialog
 * Better SlovoEd dictionary integration (780 dictionaries are supported)
