--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 ===== 1.3.6 (Feb ??, 2012) =====
-* Updated Ukrainian translation (by Nazary Makarenko)
+* Updated Ukrainian translation (by Nazariy Makarenko)
 
 ===== 1.3.5 (Feb 2, 2012) =====
 * About section in the preferences dialog
