--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ===== 1.3.6 (Feb ??, 2012) =====
 * Updated Ukrainian translation (by Nazariy Makarenko)
+* No conflicts between book images and covers
 
 ===== 1.3.5 (Feb 2, 2012) =====
 * About section in the preferences dialog
