--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-===== 1.3.6 (Feb ??, 2012) =====
+===== 1.3.6 (Feb 5, 2012) =====
 * Updated Ukrainian translation (by Nazariy Makarenko)
 * No conflicts between book images and covers
+* No black screen at start: synchronization issue has been fixed
 
 ===== 1.3.5 (Feb 2, 2012) =====
 * About section in the preferences dialog
