font smoothing settings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.3.7 (Feb ??, 2012) =====
+* Font smoothing settings (Preferences dialog -> Text -> Font properties)
+
 ===== 1.3.6 (Feb 6, 2012) =====
 * Updated Ukrainian translation (by Nazariy Makarenko)
 * LEO dictionary integration
