--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-===== 1.3.7 (Feb ??, 2012) =====
+===== 1.3.7 (Feb 9, 2012) =====
 * Font smoothing settings (Preferences dialog -> Text -> Font properties)
+* Fixed 'question symbols in menu' issue
 
 ===== 1.3.6 (Feb 6, 2012) =====
 * Updated Ukrainian translation (by Nazariy Makarenko)
