--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ===== 1.3.8 (Feb ??, 2012) =====
 * striked through/underlined text support
+* asynchronous bonjour scanning: user can select any found network even if scanning is still in progress
 
 ===== 1.3.7 (Feb 9, 2012) =====
 * Font smoothing settings (Settings -> Text -> Font properties)
