--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ===== 1.3.8 (Feb ??, 2012) =====
 * striked through/underlined text support
 * asynchronous bonjour scanning: user can select any found network even if scanning is still in progress
+* better support for "related" catalogs in book descriptions
 
 ===== 1.3.7 (Feb 9, 2012) =====
 * Font smoothing settings (Settings -> Text -> Font properties)
