--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Updated Hungarian localization (by Szabó Lajos Balázs)
 * Local network scanning has been moved to a separate plugin; WiFi permissions are not required more
 * "Old" package works on new devices
+* "Back" button behaviour has been changed: jump back if we are on the same place where last footnote jump has been ended; show menu otherwise
 
 ===== 1.3.7 (Feb 9, 2012) =====
 * Font smoothing settings (Settings -> Text -> Font properties)
