--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 2.0 beta 6 (Feb 26, 2012) =====
+* All changes from 1.3.9
+
 ===== 2.0 beta 5 (Feb 26, 2012) =====
 * All changes from 1.3.8
 
