--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.4 (Mar ??, 2012) =====
+* Updated Czech localization (by Marek Pavelka)
+
 ===== 1.3.9 (Feb 26, 2012) =====
 * FBReader reads Mobipocket files with PDB/PRC extensions
 
