--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * Experimental *.txt support
 * Changed "Back" button behaviour: FBReader tries to jump back before showing Cancel menu
 * Updated Czech localization (by Marek Pavelka)
+* Smoother scrolling in local and network libraries
 
 ===== 1.3.9 (Feb 26, 2012) =====
 * FBReader reads Mobipocket files with PDB/PRC extensions
