--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+===== 1.4.1 (Mar ??, 2012) =====
+
 ===== 1.4 (Mar 18, 2012) =====
 * *.txt support
 * Changed "Back" button behaviour: FBReader tries to jump back before showing Cancel menu
