--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-===== 1.4.1 (Mar ??, 2012) =====
+===== 1.4.2 (??? ??, 2012) =====
+
+===== 1.4.1 (Mar 23, 2012) =====
 * RTF support (images are not supported at this moment)
 * Fixed Dutch language detection
 
