--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -1,10 +1,14 @@
 Messages: David, китайцы (opds), Scott (FBSync)
 Site: FAQ, API doc, Czech tips
 
-* rtf: images
+litres: top/hot lists (what's happen?)
+litres: author photos
+
+DONE rtf: images
 * rtf: underline & strikethrough
 * native fb2 plugin
 
+* rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
 * author choose/edit dialog
 * rtf: embedded fonts?
