--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -1,12 +1,18 @@
 Messages: David, китайцы (opds), Scott (FBSync)
 Site: FAQ, API doc, Czech tips
 
+plugins in menu!
+
 litres: top/hot lists (what's happen?)
 litres: author photos
 
 DONE rtf: images
 * rtf: underline & strikethrough
-* native fb2 plugin
+* native fb2 plugin: images
+* native fb2 plugin: links
+* native fb2 plugin: underline
+* native fb2 plugin: strikethrough
+* native fb2 plugin: cover
 
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
