native fb2 images support (in progress)

--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -9,10 +9,10 @@ litres: author photos
 DONE rtf: images
 * rtf: underline & strikethrough
 * native fb2 plugin: images
-* native fb2 plugin: links
 * native fb2 plugin: underline
 * native fb2 plugin: strikethrough
 * native fb2 plugin: cover
+* native fb2 plugin: cover in text
 
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
