--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 ===== 1.4.2 (??? ??, 2012) =====
+* Supported embedded images in RTF files
+* Fixed plugin items in main menu
 
 ===== 1.4.1 (Mar 23, 2012) =====
 * RTF support (images are not supported at this moment)
