first working implemetation of Base64InputStream

--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -8,7 +8,7 @@ litres: author photos
 
 DONE rtf: images
 * rtf: underline & strikethrough
-* native fb2 plugin: images
+* native fb2 plugin: images: Base64InputStream optimization
 * native fb2 plugin: underline
 * native fb2 plugin: strikethrough
 * native fb2 plugin: cover
