--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -8,6 +8,7 @@ litres: author photos
 
 DONE rtf: images
 * rtf: underline & strikethrough
+* fb2 plugin: use java plugin first (?)
 * native fb2 plugin: images: Base64InputStream optimization
 * native fb2 plugin: underline
 * native fb2 plugin: strikethrough
