cover flag for images

--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -13,7 +13,7 @@ DONE rtf: images
 * native fb2 plugin: underline
 * native fb2 plugin: strikethrough
 * native fb2 plugin: cover
-* native fb2 plugin: cover in text
+DONE native fb2 plugin: cover in text
 
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
