--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -9,9 +9,9 @@ litres: author photos
 DONE rtf: images
 * rtf: underline & strikethrough
 * fb2 plugin: use java plugin first (?)
-* native fb2 plugin: images: Base64InputStream optimization
-* native fb2 plugin: underline
-* native fb2 plugin: strikethrough
+* native fb2 plugin: images: Base64InputStream speed optimization
+??? native fb2 plugin: underline
+DONE native fb2 plugin: strikethrough
 * native fb2 plugin: cover
 DONE native fb2 plugin: cover in text
 
