--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -14,6 +14,8 @@ DONE rtf: images
 DONE native fb2 plugin: strikethrough
 * native fb2 plugin: cover
 DONE native fb2 plugin: cover in text
+* fb2 plugins: compare native & java
+* java fb2 plugin: use Base64InputStream technique
 
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
