--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -1,8 +1,6 @@
 Messages: David, китайцы (opds), Scott (FBSync)
 Site: FAQ, API doc, Czech tips
 
-plugins in menu!
-
 litres: top/hot lists (what's happen?)
 litres: author photos
 
@@ -17,6 +15,7 @@ DONE native fb2 plugin: cover in text
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
 
+* API от Paragon
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
 * author choose/edit dialog
