cover loading in fb2 native plugin

--- a/TODO.1.4.2
+++ b/TODO.1.4.2
@@ -7,10 +7,10 @@ litres: author photos
 DONE rtf: images
 * rtf: underline & strikethrough
 * fb2 plugin: use java plugin first (?)
-* native fb2 plugin: images: Base64InputStream speed optimization
+DONE native fb2 plugin: images: Base64InputStream speed optimization
 ??? native fb2 plugin: underline
 DONE native fb2 plugin: strikethrough
-* native fb2 plugin: cover
+DONE native fb2 plugin: cover
 DONE native fb2 plugin: cover in text
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
