--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+===== 1.4.3 (Mar 29, 2012) =====
+* fixed fb2 books opening issue
+* fixed fb2 genres detection issue
+
 ===== 1.4.2 (Mar 27, 2012) =====
 * Supported embedded images in RTF files
 * New fb2 engine
