--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ===== 1.4.4 (Apr ??, 2012) =====
 * introduced jni C++ wrappers (this avoids incorrect method calls)
 * fixed repeated book opening issue
+* max margin value changed to 100
 
 ===== 1.4.3 (Mar 29, 2012) =====
 * fixed fb2 books opening issue
