--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * introduced jni C++ wrappers (this avoids incorrect method calls)
 * fixed repeated book opening issue
 * max margin value changed to 100
+* first line indent depends on screen DPI
 
 ===== 1.4.3 (Mar 29, 2012) =====
 * fixed fb2 books opening issue
