--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -4,16 +4,8 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* fb2: genres
-
-DONE rtf: images
+* default margin values: screen size dependency
 * rtf: underline & strikethrough
-* fb2 plugin: use java plugin first (?)
-DONE native fb2 plugin: images: Base64InputStream speed optimization
-??? native fb2 plugin: underline
-DONE native fb2 plugin: strikethrough
-DONE native fb2 plugin: cover
-DONE native fb2 plugin: cover in text
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
 
