--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -8,6 +8,7 @@ litres: author photos
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
+* language codes in ZLTextHyphenator and ZLLanguageUtil
 
 * API от Paragon
 * rtf: cover?
