--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -9,6 +9,7 @@ litres: author photos
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
 * language codes in ZLTextHyphenator and ZLLanguageUtil
+* library item in Cancel menu?
 
 * API от Paragon
 * rtf: cover?
