--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -10,6 +10,7 @@ litres: author photos
 * java fb2 plugin: use Base64InputStream technique
 * language codes in ZLTextHyphenator and ZLLanguageUtil
 * library item in Cancel menu?
+* "No catalog name" in add custom catalog dialog?
 
 * API от Paragon
 * rtf: cover?
