--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -4,6 +4,7 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* share books via bluetooth
 * default margin values: screen size dependency
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
