--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+===== 1.4.5 (Apr 01, 2012) =====
+* ePub reader does not fail if NCX file in referenced but missing
+* native plugin does not crash if cache file cannot be created
+
 ===== 1.4.4 (Apr 01, 2012) =====
 * introduced jni C++ wrappers (this avoids incorrect method calls)
 * fixed repeated book opening issue
