--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.4.5 (Apr 01, 2012) =====
+===== 1.4.5 (Apr ??, 2012) =====
 * ePub reader does not fail if NCX file in referenced but missing
 * native plugin does not crash if cache file cannot be created
 
