--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -4,7 +4,7 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* crash if SD-card is not inserted
+DONE crash if SD-card is not inserted
 * share books via bluetooth
 * default margin values: screen size dependency
 * rtf: underline & strikethrough
