--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 * 'Open library' and 'Open network library' items in back button menu 
 * ePub reader does not fail if NCX file in referenced but missing
 * native plugin does not crash if cache file cannot be created
+* right and left margind depend on screen size
+* fixed 'no catalog title' issue in 'add custom catalog' dialog
 
 ===== 1.4.4 (Apr 01, 2012) =====
 * introduced jni C++ wrappers (this avoids incorrect method calls)
