--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -4,15 +4,12 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-DONE crash if SD-card is not inserted
 * share books via bluetooth
-* default margin values: screen size dependency
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
 * language codes in ZLTextHyphenator and ZLLanguageUtil
-* library item in Cancel menu?
-* "No catalog name" in add custom catalog dialog?
+* resources synchronization
 
 * API от Paragon
 * rtf: cover?
@@ -28,7 +25,6 @@ DONE crash if SD-card is not inserted
 * Clear caches
 * Two-page view
 * repaint/reload book after library visiting (and book info editing)
-* синхронизовать ресурсы
 * page turning with overlapping
 * Licenses in About dialog
 * ChangeLog in About dialog
