--- a/TODO.1.4.5
+++ b/TODO.1.4.5
@@ -10,6 +10,7 @@ litres: author photos
 * java fb2 plugin: use Base64InputStream technique
 * language codes in ZLTextHyphenator and ZLLanguageUtil
 * resources synchronization
+* in library: search more on network
 
 * API от Paragon
 * rtf: cover?
