--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -11,6 +11,9 @@ litres: author photos
 * language codes in ZLTextHyphenator and ZLLanguageUtil
 * resources synchronization
 * in library: search more on network
+* ePubs in zips
+* scale-to-fullscreen for all pictures
+* show-hide temporary activity after brightness changing (to switch off the button lights)
 
 * API от Paragon
 * rtf: cover?
