--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,8 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* reproduce "cannot read from zip" issue
+* Chinese/Tamil UTF16 files
 * share books via bluetooth
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
