FormatPlugin.realBookFile() method

--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -16,6 +16,7 @@ litres: author photos
 * ePubs in zips
 * scale-to-fullscreen for all pictures
 * show-hide temporary activity after brightness changing (to switch off the button lights)
+* encodings list for native plugins
 
 * API от Paragon
 * rtf: cover?
