--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,9 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* cover in epubs/3/ (both java & native)
+* cover in "With a Little Help" (native)
+* loading time for 3.epub
 * reproduce "cannot read from zip" issue
 * Chinese/Tamil UTF16 files
 * share books via bluetooth
