--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,7 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* test opensearch parser
 * - namespaceMapChangedHandler
 * cover in epubs/3/ (native)
 * cover in "With a Little Help" (native)
