--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,8 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* epub: series (Adams!)
+* epub: tags (Adams!)
 * test opensearch parser
 * - namespaceMapChangedHandler
 * cover in epubs/3/ (native)
