--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -5,6 +5,8 @@ litres: top/hot lists (what's happen?)
 litres: author photos
 
 * test opensearch parser
+* series index => Decimal
+* update series data for ePubs
 * - namespaceMapChangedHandler
 * cover in epubs/3/ (native)
 * cover in "With a Little Help" (native)
