--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,7 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* check new condition syntax
 * test opensearch parser
 * series index => Decimal
 * update series data for ePubs
