--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -4,6 +4,7 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* opf location in ePub3
 * epub: series (Adams!)
 * check new condition syntax
 * test opensearch parser
