--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -27,6 +27,9 @@ litres: author photos
 * scale-to-fullscreen for all pictures
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 * encodings list for native plugins
+* native: CSS!
+* embedded fonts (ePub)
+* предупреждение "не могу открыть зашифрованный файл"
 
 * API от Paragon
 * rtf: cover?
@@ -54,10 +57,8 @@ litres: author photos
 * Advanced settings plugin (formats)
 * http://4pda.ru/forum/index.php?showtopic=282260
 * book id в API
-* предупреждение "не могу открыть зашифрованный файл"
 * в настройках шрифтов и обоев -- совет, как добавить свои
 * Multiple books directories
-* native: CSS!
 * native: zip caching
 * native: full-screen cover images
 
