--- a/TODO.1.4.6
+++ b/TODO.1.4.6
@@ -18,7 +18,7 @@ litres: author photos
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
-* language codes in ZLTextHyphenator and ZLLanguageUtil
+* language codes in ZLTextHyphenator and ZLLanguageUtil (java & cpp)
 * resources synchronization
 * in library: search more on network
 * ePubs in zips
