--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+===== 1.4.6 (Apr ??, 2012) =====
+* Improved cover support for ePubs
+* Improved series information support for ePubs
+
 ===== 1.4.5 (Apr 08, 2012) =====
 * book sharing via e-mail, skype, etc
 * 'Open library' and 'Open network library' items in back button menu 
