--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-===== 1.4.6 (Apr ??, 2012) =====
+===== 1.5 (May ??, 2012) =====
+* New faster engine got ePub files
 * Improved cover support for ePubs
 * Improved series information support for ePubs
 * Portuguese translation by http://www.gototranslation.com, sponsored by Panacea Supplies
