--- a/TODO.1.5
+++ b/TODO.1.5
@@ -4,6 +4,8 @@ Site: FAQ, API doc, Czech tips
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* "Shared by FBReader" in message with shared book
+* Link sharing
 * fb2 native: footnote id depth
 * check new condition syntax
 * test opensearch parser
