more todo items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -1,9 +1,12 @@
 Messages: David, китайцы (opds), Scott (FBSync)
 Site: FAQ, API doc, Czech tips
+Larger icon on the site
 
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* Screen orientation by default: not selected?
+* Old style seekbar for navigation
 * "Shared by FBReader" in message with shared book
 * Link sharing
 * fb2 native: footnote id depth
