--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,8 +6,10 @@ litres: top/hot lists (what's happen?)
 litres: author photos
 
 * Screen orientation by default: not selected?
-* Old style seekbar for navigation
-* "Shared by FBReader" in message with shared book
+DONE Old style seekbar for navigation
+* Start position mark in navigation widget
+DONE "Shared from FBReader" in message with shared book
+* Better file name for shared file
 * Link sharing
 * fb2 native: footnote id depth
 * check new condition syntax
