--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,7 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* Screen orientation by default: not selected?
+DONE Screen orientation by default: not selected?
 DONE Old style seekbar for navigation
 * Start position mark in navigation widget
 DONE "Shared from FBReader" in message with shared book
