more TODO items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,9 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* zip: support unicode file names (both java & cpp)
+* native code: send URL instead of ZLFileImage
+* zip: re-use open files
 DONE Screen orientation by default: not selected?
 DONE Old style seekbar for navigation
 * Start position mark in navigation widget
