--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 * Improved series information support for ePubs
 * Portuguese translation by http://www.gototranslation.com, sponsored by Panacea Supplies
 * ICS: old style navigation bar
+* Fixed multibyte (UTF16, GB18030, etc.) encodings support
 
 ===== 1.4.5 (Apr 08, 2012) =====
 * book sharing via e-mail, skype, etc
