--- a/TODO.1.5
+++ b/TODO.1.5
@@ -19,7 +19,7 @@ DONE "Shared from FBReader" in message with shared book
 * test opensearch parser
 * update series data for ePubs
 * - namespaceMapChangedHandler
-* Chinese/Tamil UTF16 files
+DONE Chinese/Tamil UTF16 files
 * rtf: underline & strikethrough
 * fb2 plugins: compare native & java
 * java fb2 plugin: use Base64InputStream technique
