--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,36 +5,37 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* zip: support unicode file names (both java & cpp)
-* native code: send URL instead of ZLFileImage
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
 DONE Old style seekbar for navigation
 * Start position mark in navigation widget
 DONE "Shared from FBReader" in message with shared book
-* Better file name for shared file
 * Link sharing
 * fb2 native: footnote id depth
 * check new condition syntax
 * test opensearch parser
 * update series data for ePubs
-* - namespaceMapChangedHandler
 DONE Chinese/Tamil UTF16 files
-* rtf: underline & strikethrough
 * fb2 plugins: compare native & java
-* java fb2 plugin: use Base64InputStream technique
 * language codes in ZLTextHyphenator and ZLLanguageUtil (java & cpp)
 * resources synchronization
 * in library: search more on network
 * ePubs in zips
 * scale-to-fullscreen for all pictures
 * show-hide temporary activity after brightness changing (to switch off the button lights)
-* encodings list for native plugins
+DONE encodings list for native plugins
 * native: CSS!
 * embedded fonts (ePub)
 * предупреждение "не могу открыть зашифрованный файл"
-
 * API от Paragon
+* Two-page view
+
+* Better file name for shared file
+* java fb2 plugin: use Base64InputStream technique
+* - namespaceMapChangedHandler
+* rtf: underline & strikethrough
+* zip: support unicode file names (both java & cpp)
+* native code: send URL instead of ZLFileImage
 * rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
 * author choose/edit dialog
@@ -46,7 +47,6 @@ DONE Chinese/Tamil UTF16 files
 * strikethrough test for native version
 * Show action bar for a second at start (?)
 * Clear caches
-* Two-page view
 * repaint/reload book after library visiting (and book info editing)
 * page turning with overlapping
 * Licenses in About dialog
