--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
 DONE Old style seekbar for navigation
