CSS processing (in progress, alignment style setting works)

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -27,6 +27,7 @@ DONE Chinese/Tamil UTF16 files
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 DONE encodings list for native plugins
 * native: CSS!
+* CSS: parse tag lists like 'h1,h2,h3'
 * embedded fonts (ePub)
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
