CSS: bold & italic

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -28,7 +28,7 @@ DONE Chinese/Tamil UTF16 files
 DONE encodings list for native plugins
 * native: CSS!
 * CSS: parse tag lists like 'h1,h2,h3'
-* embedded fonts (ePub)
+* CSS: embedded fonts
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
