CSS support (in progress)

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,7 +5,6 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* do not read CSS file multiple times
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
@@ -26,9 +25,17 @@ DONE Chinese/Tamil UTF16 files
 * scale-to-fullscreen for all pictures
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 DONE encodings list for native plugins
-* native: CSS!
-* CSS: parse tag lists like 'h1,h2,h3'
-* CSS: embedded fonts
+* CSS:
+  ** why do we use CSS stack?
+  ** parse tag lists like 'h1,h2,h3'
+  ** "metric" style params
+  ** font size
+  ** underline
+  ** strikethrough
+  ** embedded fonts
+  ** list of fonts
+  ** do not read style file multiple times
+  ** page breaks
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
