CSS: comma-separated selectors

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -27,7 +27,7 @@ DONE Chinese/Tamil UTF16 files
 DONE encodings list for native plugins
 * CSS:
   ** why do we use CSS stack?
-  ** parse tag lists like 'h1,h2,h3'
+  DONE parse tag lists like 'h1,h2,h3'
   ** "metric" style params
   ** font size
   ** underline
