--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* ePub: reference resolver (Имя розы)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
@@ -36,6 +37,7 @@ DONE encodings list for native plugins
   ** list of fonts
   ** do not read style file multiple times
   ** page breaks
+  ** embedded tags in selectors (h2 p { font-family: helvetica })
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
