ePub references resolver

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,7 +5,8 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* ePub: reference resolver (Имя розы)
+DONE ePub: reference resolver (Имя розы)
+* ePub: reverence shortening in native code (like java code shortening)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
