--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* "Scan hidden directories" option
 DONE ePub: reference resolver (Имя розы)
 * ePub: reverence shortening in native code (like java code shortening)
 * "modes" for wallpapers: tile, fullscreen, etc.
@@ -74,6 +75,7 @@ DONE encodings list for native plugins
 * http://4pda.ru/forum/index.php?showtopic=282260
 * book id в API
 * в настройках шрифтов и обоев -- совет, как добавить свои
+* показывать шрифты в списке соответствующими шрифтами
 * Multiple books directories
 * native: zip caching
 * native: full-screen cover images
