CSS support (in progress)

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -29,7 +29,8 @@ DONE Chinese/Tamil UTF16 files
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 DONE encodings list for native plugins
 * CSS:
-  ** why do we use CSS stack?
+  ** @import
+  ** why do we use CSS stack (in XHTML parser)?
   DONE parse tag lists like 'h1,h2,h3'
   ** "metric" style params
   ** font size
@@ -40,6 +41,8 @@ DONE encodings list for native plugins
   ** do not read style file multiple times
   ** page breaks
   ** embedded tags in selectors (h2 p { font-family: helvetica })
+  ** colors
+  ** backgrounds
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
