CSS support (in progress)

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -34,6 +34,7 @@ DONE encodings list for native plugins
   DONE parse tag lists like 'h1,h2,h3'
   ** "metric" style params
   ** font size
+  DONE font size: smaller and larger
   ** underline
   ** strikethrough
   ** embedded fonts
@@ -43,6 +44,7 @@ DONE encodings list for native plugins
   ** embedded tags in selectors (h2 p { font-family: helvetica })
   ** colors
   ** backgrounds
+  ** don't apply "fbreader internal" font size settings before CSS "smaller" or "larger"
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
