--- a/TODO.1.5
+++ b/TODO.1.5
@@ -35,8 +35,9 @@ DONE encodings list for native plugins
   ** "metric" style params
   ** font size
   DONE font size: smaller and larger
-  ** underline
-  ** strikethrough
+  ** font size: inherit
+  DONE underline
+  DONE strikethrough
   ** embedded fonts
   ** list of fonts
   ** do not read style file multiple times
