updated ChangeLog & TODO

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,8 +6,10 @@ litres: top/hot lists (what's happen?)
 litres: author photos
 
 * "Scan hidden directories" option
-DONE ePub: reference resolver (Имя розы)
-* ePub: reverence shortening in native code (like java code shortening)
+* ePub:
+  DONE reference resolver (Имя розы)
+  ** reverence shortening in native code (like java code shortening)
+  ** large covers (cover mark for images in native code)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
@@ -32,8 +34,9 @@ DONE encodings list for native plugins
   ** @import
   ** why do we use CSS stack (in XHTML parser)?
   DONE parse tag lists like 'h1,h2,h3'
-  ** "metric" style params
-  ** font size
+  ** metrics: font X height
+  ** metrics: screen height & width
+  DONE font size
   DONE font size: smaller and larger
   ** font size: inherit
   DONE underline
@@ -49,6 +52,7 @@ DONE encodings list for native plugins
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
+* image size option (cover only full-screen, all full-screen, etc.)
 
 * Better file name for shared file
 * java fb2 plugin: use Base64InputStream technique
