--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Some CSS support for ePubs:
   ** alignments
   ** font styles (bold/italic/underline/line-through)
+  ** font size
 * Portuguese translation by http://www.gototranslation.com, sponsored by Panacea Supplies
 * ICS: old style navigation bar
 * Fixed multibyte (UTF16, GB18030, etc.) encodings support
