--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* "Use embedded fomnts" option
 * "Scan hidden directories" option
 * ePub:
   DONE reference resolver (Имя розы)
