namespace processing cleanup; 'inherit' font size

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -10,7 +10,7 @@ litres: author photos
 * ePub:
   DONE reference resolver (Имя розы)
   ** reverence shortening in native code (like java code shortening)
-  ** large covers (cover mark for images in native code)
+  DONE large covers (cover mark for images in native code)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
 DONE Screen orientation by default: not selected?
@@ -39,7 +39,8 @@ DONE encodings list for native plugins
   ** metrics: screen height & width
   DONE font size
   DONE font size: smaller and larger
-  ** font size: inherit
+  ** font modifier: smallcaps
+  DONE font size: inherit
   DONE underline
   DONE strikethrough
   ** embedded fonts
@@ -49,7 +50,7 @@ DONE encodings list for native plugins
   ** embedded tags in selectors (h2 p { font-family: helvetica })
   ** colors
   ** backgrounds
-  ** don't apply "fbreader internal" font size settings before CSS "smaller" or "larger"
+  DONE don't apply "fbreader internal" font size settings before CSS "smaller" or "larger"
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
