--- a/TODO.1.5
+++ b/TODO.1.5
@@ -47,7 +47,7 @@ DONE encodings list for native plugins
   ** list of fonts
   ** do not read style file multiple times
   ** page breaks
-  ** embedded tags in selectors (h2 p { font-family: helvetica })
+  ** compound selectors ("h2 p" or "a[href]")
   ** colors
   ** backgrounds
   DONE don't apply "fbreader internal" font size settings before CSS "smaller" or "larger"
