--- a/TODO.1.5
+++ b/TODO.1.5
@@ -9,7 +9,7 @@ litres: author photos
 * "Scan hidden directories" option
 * ePub:
   DONE reference resolver (Имя розы)
-  ** reverence shortening in native code (like java code shortening)
+  ** reference shortening in native code (like java code shortening)
   DONE large covers (cover mark for images in native code)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
@@ -28,7 +28,6 @@ DONE Chinese/Tamil UTF16 files
 * resources synchronization
 * in library: search more on network
 * ePubs in zips
-* scale-to-fullscreen for all pictures
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 DONE encodings list for native plugins
 * CSS:
@@ -44,7 +43,7 @@ DONE encodings list for native plugins
   DONE underline
   DONE strikethrough
   ** embedded fonts
-  ** list of fonts
+  ** list of fonts (for same selector, in preference order)
   ** do not read style file multiple times
   ** page breaks
   ** compound selectors ("h2 p" or "a[href]")
