fbreader-action:bla-bla-bla URLs processing fixed

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
 * "Scan hidden directories" option
 * ePub:
