more TODO items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
+* Empty pages at start of the SJ book (in emulator)
 * Hyperlinks in the SJ book
 * Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
