--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,8 +5,9 @@ Larger icon on the site
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-* Empty pages at start of the SJ book (in emulator)
-* Hyperlinks in the SJ book
+* the SJ book:
+  ** empty pages at start (in emulator)
+  ** hyperlinks (including button image)
 * Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
 * "Scan hidden directories" option
@@ -61,10 +62,12 @@ DONE encodings list for native plugins
 * Better file name for shared file
 * java fb2 plugin: use Base64InputStream technique
 * - namespaceMapChangedHandler
-* rtf: underline & strikethrough
+* rtf:
+  ** underline & strikethrough
+  ** cover?
+  ** footnotes?
 * zip: support unicode file names (both java & cpp)
 * native code: send URL instead of ZLFileImage
-* rtf: cover?
 * better brightness setting: no black screen, brightness "lower than system" (decrease color brightness)
 * author choose/edit dialog
 * rtf: embedded fonts?
