updated ChangeLog & TODO

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -50,11 +50,12 @@ DONE encodings list for native plugins
   ** embedded fonts
   ** list of fonts (for same selector, in preference order)
   ** do not read style file multiple times
-  ** page breaks
+  ** page breaks: all values (including "avoid")
   ** compound selectors ("h2 p" or "a[href]")
   ** colors
   ** backgrounds
   DONE don't apply "fbreader internal" font size settings before CSS "smaller" or "larger"
+  ** use CSS for default styles
 * предупреждение "не могу открыть зашифрованный файл"
 * API от Paragon
 * Two-page view
