--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
   ** alignments
   ** font styles (bold/italic/underline/line-through)
   ** font size
+  ** page breaks
 * Portuguese translation by http://www.gototranslation.com, sponsored by Panacea Supplies
 * ICS: old style navigation bar
 * Fixed multibyte (UTF16, GB18030, etc.) encodings support
