--- a/TODO.1.5
+++ b/TODO.1.5
@@ -8,13 +8,14 @@ litres: author photos
 * <hr/> tag
 * the SJ book:
   ** empty pages at start (in emulator)
-  ** hyperlinks (including button image)
+  DONE hyperlinks (including button image)
+  ** TOC!!!
 * Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
 * "Scan hidden directories" option
 * ePub:
   DONE reference resolver (Имя розы)
-  ** reference shortening in native code (like java code shortening)
+  DONE reference shortening in native code (like java code shortening)
   DONE large covers (cover mark for images in native code)
 * "modes" for wallpapers: tile, fullscreen, etc.
 * zip: re-use open files
