fixed TOC processing in ePubs

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -9,7 +9,7 @@ litres: author photos
 * the SJ book:
   ** empty pages at start (in emulator)
   DONE hyperlinks (including button image)
-  ** TOC!!!
+  DONE TOC!!!
 * Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
 * "Scan hidden directories" option
