updated stylesheet parser: skips @-rules with no style body correctly

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -37,6 +37,8 @@ DONE Chinese/Tamil UTF16 files
 * show-hide temporary activity after brightness changing (to switch off the button lights)
 DONE encodings list for native plugins
 * CSS:
+  ** @namespace
+  ** @page
   ** @import
   ** why do we use CSS stack (in XHTML parser)?
   DONE parse tag lists like 'h1,h2,h3'
