--- a/TODO.1.5
+++ b/TODO.1.5
@@ -1,9 +1,9 @@
-Messages: David, китайцы (opds), Scott (FBSync)
-Site: FAQ, API doc, Czech tips
-Larger icon on the site
+Site: FAQ, API doc, Czech tips, larger icon
 
 litres: top/hot lists (what's happen?)
 litres: author photos
+
+1.5:
 
 * the SJ book:
   ** empty pages at start (in emulator)
@@ -26,6 +26,8 @@ litres: author photos
   ** embedded fonts
 * Two-page view
 * image size option (cover only full-screen, all full-screen, etc.)
+
+1.6+:
 
 * Link sharing
 * предупреждение "не могу открыть зашифрованный файл"
