standard namespace processing mechanish everywhere in native code

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -7,17 +7,12 @@ litres: author photos
 
 * the SJ book:
   ** empty pages at start (in emulator)
-* Network library initialization in ProcessHyperlinkAction :(
 * "Use embedded fonts" option
 * "Scan hidden directories" option
 * Start position mark in navigation widget
-* fb2 native: footnote id depth
 * test opensearch parser
-* update series data for ePubs
-* fb2 plugins: compare native & java
+* update series data for ePubs (?)
 * language codes in ZLTextHyphenator and ZLLanguageUtil (java & cpp)
-* resources synchronization
-* in library: search more on network
 * CSS:
   ** @page
   ** @import
@@ -26,9 +21,14 @@ litres: author photos
   ** embedded fonts
 * Two-page view
 * image size option (cover only full-screen, all full-screen, etc.)
+* resources synchronization
 
-1.6+:
+1.5.1+:
 
+* Network library initialization in ProcessHyperlinkAction :(
+* fb2 native: footnote id depth
+* fb2 plugins: compare native & java
+* in library: search more on network
 * Link sharing
 * предупреждение "не могу открыть зашифрованный файл"
 * CSS:
@@ -50,7 +50,7 @@ litres: author photos
 * <hr/> tag
 * Better file name for shared file
 * java fb2 plugin: use Base64InputStream technique
-* - namespaceMapChangedHandler
+* - namespaceMapChangedHandler (java)
 * rtf:
   ** underline & strikethrough
   ** cover?
