--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 * Portuguese translation by http://www.gototranslation.com, sponsored by Panacea Supplies
 * ICS: old style navigation bar
 * Fixed multibyte (UTF16, GB18030, etc.) encodings support
+* Experimental html support
 
 ===== 1.4.5 (Apr 08, 2012) =====
 * book sharing via e-mail, skype, etc
