--- a/TODO.1.5
+++ b/TODO.1.5
@@ -3,8 +3,9 @@ Site: FAQ, API doc, Czech tips, larger icon
 litres: top/hot lists (what's happen?)
 litres: author photos
 
-1.5:
+1.5.*:
 
+* font family if font is not found
 * the SJ book:
   ** empty pages at start (in emulator)
 * "Use embedded fonts" option
@@ -23,7 +24,7 @@ litres: author photos
 * image size option (cover only full-screen, all full-screen, etc.)
 * resources synchronization
 
-1.5.1+:
+1.6+:
 
 * Network library initialization in ProcessHyperlinkAction :(
 * fb2 native: footnote id depth
