--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,7 +5,6 @@ litres: author photos
 
 1.5.*:
 
-* font family if font is not found
 * the SJ book:
   ** empty pages at start (in emulator)
 * "Use embedded fonts" option
@@ -20,6 +19,7 @@ litres: author photos
   ** metrics: font X height
   ** metrics: screen height & width
   ** embedded fonts
+  ** font family if font is not found
 * Two-page view
 * image size option (cover only full-screen, all full-screen, etc.)
 * resources synchronization
