--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.5 (May ??, 2012) =====
+===== 1.5 (May 13, 2012) =====
 * New faster engine got ePub files
 * Improved cover support for ePubs
 * Improved series information support for ePubs
