--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-===== 1.5.1 (May ??, 2012) =====
+===== 1.5.1 (May 15, 2012) =====
 * Fixed pt/px measured font size processing for CSS's
 * Fixed ToC in some ePubs (e.g. for ePubs from project Gutenberg)
+* Fixed crash on incorrect *.fb2.zip files
 
 ===== 1.5 (May 13, 2012) =====
 * New faster engine got ePub files
