--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ litres: author photos
 
 1.5.*:
 
+* duplicate books (http://4pda.ru/forum/index.php?s=&showtopic=101249&view=findpost&p=13220966)
 * the SJ book:
   ** empty pages at start (in emulator)
 * "Use embedded fonts" option
