--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ===== 1.5.2 (May ??, 2012) =====
 * Fixed reading of zip archives with 0x08 bit in entry flag
+* Fixed reading of zip entry names on MIPS devices
 * Fixed reading of opf files with defined :opf prefix
 * No book duplicates in library
 
