--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.5.3 (May ??, 2012) =====
+* Fixed book downloading for hosts containing '_' in name
+
 ===== 1.5.2 (May 19, 2012) =====
 * Fixed reading of zip archives with 0x08 bit in entry flag
 * Fixed reading of zip entry names on MIPS devices
