more TODO items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,9 @@ litres: author photos
 
 1.5.*:
 
+* TTS patch
+* CHM patch
+* standard notification color (and text size?)
 * the SJ book:
   ** empty pages at start (in emulator)
 * "Use embedded fonts" option
