more TODO items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ litres: author photos
 
 1.5.*:
 
+* convert resources to res/xml (?)
 * TTS patch
 * CHM patch
 * standard notification color (and text size?)
