series info reading (ePub), more TODO items

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,8 @@ litres: author photos
 
 1.5.*:
 
+* Chinese books (mail from Eric)
+* notification color
 * jumping search window
 * convert resources to res/xml (?)
 * TTS patch
