updated TODO, VERSION => 1.5.3

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,10 +5,9 @@ litres: author photos
 
 1.5.*:
 
+* Footnotes on the same page
 * Chinese books (mail from Eric)
-* notification color
 * jumping search window
-* convert resources to res/xml (?)
 * TTS patch
 * CHM patch
 * standard notification color (and text size?)
