more API methods

--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,7 @@ litres: author photos
 
 1.5.*:
 
+* Advanced settings plugin does not run
 * Autogeneration for ApiMethods & ApiImplementations
 * Footnotes on the same page
 * Chinese books (mail from Eric)
