--- a/TODO.1.5
+++ b/TODO.1.5
@@ -5,6 +5,8 @@ litres: author photos
 
 1.5.*:
 
+* Multi-level sections in fb2 (e-mail from Валентин Нечепуренко)
+* Centered text in Gutenberg's text (e-mail from Sake)
 * Autogeneration for ApiMethods & ApiImplementations
 * Footnotes on the same page
 * Chinese books (mail from Eric)
