--- a/TODO.1.5
+++ b/TODO.1.5
@@ -2,9 +2,11 @@ Site: FAQ, API doc, Czech tips, larger icon
 
 litres: top/hot lists (what's happen?)
 litres: author photos
+Amazon store: issues
 
 1.5.*:
 
+* Book opening (e-mail from Alfred)
 * Multi-level sections in fb2 (e-mail from Валентин Нечепуренко)
 * Centered text in Gutenberg's text (e-mail from Sake)
 * Autogeneration for ApiMethods & ApiImplementations
