--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,6 +6,8 @@ Amazon store: issues
 
 1.5.*:
 
+* API methods for Greg
+* Fullscreen in ICS (hide OS UI elements)
 * Book opening (e-mail from Alfred)
 * Autogeneration for ApiMethods & ApiImplementations
 * Footnotes on the same page
