--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+===== 1.5.4 (May 27, 2012) =====
+* Minor issues in zip/ePub files
+* More API methods
+
 ===== 1.5.3 (May 25, 2012) =====
 * Fixed book downloading for hosts containing '_' in name (e.g. for epubbud.com catalogue)
 * Fixed ePub series info reading for books where calibre namespace is not defined
