--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,6 +6,8 @@ Amazon store: issues
 
 1.5.*:
 
+* Sort emails
+* own logging system
 * API methods for Greg
 * Fullscreen in ICS (hide OS UI elements)
 * Book opening (e-mail from Alfred)
@@ -13,7 +15,6 @@ Amazon store: issues
 * Footnotes on the same page
 * Chinese books (mail from Eric)
 * jumping search window
-* TTS patch
 * CHM patch
 * standard notification color (and text size?)
 * the SJ book:
