--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,6 +6,7 @@ Amazon store: issues
 
 1.5.*:
 
+* duplicates: *.epub vs. *.epub:xxx.opf
 * Sort emails
 * own logging system
 * API methods for Greg
