--- a/TODO.1.5
+++ b/TODO.1.5
@@ -4,9 +4,13 @@ litres: top/hot lists (what's happen?)
 litres: author photos
 Amazon store: issues
 
+1.5.6:
+
+* something wrong with epubbud catalog
+* duplicates: *.epub vs. *.epub:xxx.opf
+
 1.5.*:
 
-* duplicates: *.epub vs. *.epub:xxx.opf
 * Sort emails
 * own logging system
 * API methods for Greg
