--- a/TODO.1.5
+++ b/TODO.1.5
@@ -6,7 +6,7 @@ Amazon store: issues
 
 1.5.6:
 
-* something wrong with epubbud catalog
+DELAYED something wrong with epubbud catalog
 * duplicates: *.epub vs. *.epub:xxx.opf
 
 1.5.*:
