--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-===== 1.5.6 (Jun ??, 2012) =====
+===== 1.6.0 (Aug ??, 2012) =====
 * Can add custom catalogs even if opensearch links are not fully correct
 * More API methods
+* Serbian localization by Rancher
 * (Partial) Turkish localization by jericho 1200
 * Updated Chinese localization by Chris Yu
 
