--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * Can add custom catalogs even if opensearch links are not fully correct
 * More API methods
 * Serbian localization by Rancher
+* Norwegian localization by Haakon Meland Eriksen
 * (Partial) Turkish localization by jericho 1200
 * Updated Chinese localization by Chris Yu
 
