updated German translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Norwegian localization by Haakon Meland Eriksen
 * (Partial) Turkish localization by jericho 1200
 * Updated Chinese localization by Chris Yu
+* Updated German localization by Ingolf Kübler
 
 ===== 1.5.5 (Jun 03, 2012) =====
 * Fixed zip decompression (issue introduced in 1.5.4)
