--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 * Turkish localization by SonySinger
 * Updated Chinese localization by Chris Yu
 * Updated German localization by Ingolf Kübler
+* Updated Ukrainian localization by Nazariy Makarenko
 
 ===== 1.5.5 (Jun 03, 2012) =====
 * Fixed zip decompression (issue introduced in 1.5.4)
