--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ===== 1.6.0 (Sep ??, 2012) =====
 * MS Word (.doc) format support
 * Can add custom catalogs even if opensearch links are not fully correct
+* Fixed curl page turning animation on devices with Android 4.0.3/4.0.4
 * More API methods
 * Serbian localization by Rancher
 * Norwegian localization by Haakon Meland Eriksen
