--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-===== 1.6.0 (Sep ??, 2012) =====
+===== 1.6.0 (Oct 06, 2012) =====
 * MS Word (.doc) format support
 * Fixed library duplicates issue
 * Library speed optimization
 * Images fitting option
 * Fixed crash on some ePubs from Project Gutenberg
+* Fixed possible crash on book description displaying
 * Can add custom catalogs even if opensearch links are not fully correct
 * Fixed curl page turning animation on devices with Android 4.0.3/4.0.4
 * More API methods
