--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 * Norwegian localization by Haakon Meland Eriksen
 * Turkish localization by SonySinger
 * Updated Chinese localization by Chris Yu
+* Updated French localization by Mathias Monnerville
 * Updated German localization by Ingolf Kübler
 * Updated Ukrainian localization by Nazariy Makarenko
 
