fixed ms word files visibility => 1.6.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.6.0 (Oct 06, 2012) =====
+===== 1.6.0/1.6.1 (Oct 06, 2012) =====
 * MS Word (.doc) format support
 * Fixed library duplicates issue
 * Library speed optimization
