--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+===== 1.6.2 (Oct ??, 2012) =====
+* Optimized animation speed
+* Fixes in database code
+* API changes useful for TTS+ FBReader Plugin (by Greg Kochaniak)
+
 ===== 1.6.0/1.6.1 (Oct 06, 2012) =====
 * MS Word (.doc) format support
 * Fixed library duplicates issue
