--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 ===== 1.6.4 (Nov ??, 2012) =====
 * Supported encoding & language detection for *.doc (ms-word) files
+* Fixed crash in book info dialogs on some epubs (on Jelly Bean devices), code taken from https://gist.github.com/3424004
+* Fixed some problems in interaction with TTS+ plugin (by Greg Kochaniak)
 
 ===== 1.6.3 (Oct 22, 2012) =====
 * FBReader stores text position after setPageStart API method (useful for TTS plugin, code by Greg Kochaniak)
