--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.6.7 (Nov ??, 2012) =====
+===== 1.6.7 (Nov 29, 2012) =====
 * Android 4.*: show status bar if action bar is shown
 * Bulgarian hyphenation patterns, converted by Kaloyan Raev
 * OPDS: fixed opensearch description support
