--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.6.9 (Dec ??, 2012) =====
+* Updated Dutch translation (by Frank Fesevur)
+
 ===== 1.6.8 (Nov 30, 2012) =====
 * Fixed NPE during adding a custom catalog with no search link
 
