--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * Added Bulgarian translation (by Ники Арсов)
 * Updated Dutch translation (by Frank Fesevur)
 * Plural forms in Belarusian and Czech translations
+* Fixed issue with rendering during backward page turning with no amimation
 
 ===== 1.6.8 (Nov 30, 2012) =====
 * Fixed NPE during adding a custom catalog with no search link
