--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-===== 1.6.9 (Dec ??, 2012) =====
+===== 1.6.9 (Jan 03, 2013) =====
 * Added Bulgarian translation (by Ники Арсов)
 * Updated Dutch translation (by Frank Fesevur)
 * Plural forms in Belarusian and Czech translations
