--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.6.10 (Jan ??, 2013) =====
+* Fixed issue for XHTML files with several body tags (sometimes produced by Calibre)
+
 ===== 1.6.9 (Jan 03, 2013) =====
 * Added Bulgarian translation (by Ники Арсов)
 * Updated Dutch translation (by Frank Fesevur)
