--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 * 'Open book in external program' feature
 * Multiple directories for user's fonts and wallpapers
 
+===== 1.6.10 (Jan ??, 2013) =====
+* Fixed issue for XHTML files with several body tags (sometimes produced by Calibre)
+
 ===== 1.6.9 (Jan 03, 2013) =====
 * Added Bulgarian translation (by Ники Арсов)
 * Updated Dutch translation (by Frank Fesevur)
